savepoint converting routes to single char vars and pubs by qid param

--- a/client/client.jade
+++ b/client/client.jade
@@ -6,8 +6,7 @@ head
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="black")
     link(href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:300&display=swap" rel="stylesheet")
+    // link(href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet")
     //- script(src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js")
 
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
