--- a/client/q.jade
+++ b/client/q.jade
@@ -1,11 +1,11 @@
 template(name='q')
-    unless current_doc
+    unless current_q
         +loading
-    with current_doc
+    with current_q
         .ui.stackable.padded.grid.top
             .row
                 .twelve.wide.column
-                    a.ui.basic.circular.compact.icon.button.say(href="/site/#{site}") 
+                    a.ui.basic.circular.compact.icon.button.say(href="/s/#{site}") 
                         i.chevron.left.icon
                         // if watson.metadata.image
                         //     img.ui.tiny.inline.image(src=watson.metadata.image)    
@@ -49,7 +49,7 @@ template(name='q')
                                                     |accepted
                                             span.f11 !{body}
                                             with owner
-                                                a.say.ui.inline.small.header.say.zoomer.refresh_user(href="/site/#{current_doc.site}/user/#{user_id}" class=post_header_class)
+                                                a.say.ui.inline.small.header.say.zoomer.refresh_user(href="/s/#{current_doc.site}/u/#{user_id}" class=post_header_class)
                                                     img.ui.avatar.image(src=profile_image)
                                                     |!{display_name}
                                                     |{{ commafy reputation }}
@@ -73,7 +73,7 @@ template(name='q')
                                 +watson_full
                         // +comments
                 .four.wide.center.aligned.column.scrollin
-                    a.ui.fluid.basic.circular.compact.tertiary.button.say(href="/site/#{site}") 
+                    a.ui.fluid.basic.circular.compact.tertiary.button.say(href="/s/#{site}") 
                         i.chevron.left.icon
                         if watson.metadata.image
                             img.ui.tiny.inline.image(src=watson.metadata.image)    
@@ -90,7 +90,7 @@ template(name='q')
                                 |!{owner.display_name}
 
                     with owner
-                        a.ui.basic.segment.zoomer.pointer.say(href="/site/#{current_doc.site}/user/#{user_id}")
+                        a.ui.basic.segment.zoomer.pointer.say(href="/s/#{current_doc.site}/u/#{user_id}")
                             img.ui.rounded.inline.image(src=profile_image)
                             .ui.header.inline(class=post_header_class)
                                 |!{display_name}
@@ -177,7 +177,7 @@ template(name='answer_item')
         if in_dev 
             +remove_button
         with owner
-            a.ui.header.say.refresh_user(href="/site/#{current_doc.site}/user/#{user_id}")
+            a.ui.header.say.refresh_user(href="/s/#{current_doc.site}/u/#{user_id}")
                 img.ui.avatar.image(src=profile_image)
                 |!{display_name}
                 strong {{ commafy reputation }}
