--- a/client/r.jade
+++ b/client/r.jade
@@ -18,12 +18,12 @@ template(name='reddit')
                             i.massive.yin.yang.grey.loading.icon
                     each subreddit_docs
                         .ui.item  
-                            a.ui.tiny.image.goto_sub(href="/subreddit/#{data.display_name}")
+                            a.ui.tiny.image.goto_sub(href="/s/#{data.display_name}")
                                 img.ui.rounded.zoomer.image(src=data.icon_img)
                             .content.say
-                                a.ui.header.goto_sub(href="/subreddit/#{data.display_name}")
+                                a.ui.header.goto_sub(href="/s/#{data.display_name}")
                                     | !{data.display_name}
-                                a.ui.small.grey.header.goto_sub(href="/subreddit/#{data.display_name}")
+                                a.ui.small.grey.header.goto_sub(href="/s/#{data.display_name}")
                                     | !{data.header_title}
                                 // span.description !{data.public_description_html}
                                 span.description !{data.public_description}
