--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -16,10 +16,10 @@ template(name='ruser')
                     .ui.right.header      
                         |#{site}
                     .ui.two.item.fluid.large.menu
-                        a.ui.basic.item.say_users(href="/site/#{site}/users")
+                        a.ui.basic.item.say_users(href="/s/#{site}/users")
                             i.users.icon
                             |users
-                        a.ui.basic.item.say_questions(href="/site/#{site}")
+                        a.ui.basic.item.say_questions(href="/s/#{site}")
                             i.question.icon
                             |questions
                     .spacer
@@ -161,7 +161,7 @@ template(name='ruser')
                         .ui.small.header !{title}
                     with site_doc
                         .ui.segment
-                            a.ui.grey.header(href="/site/#{name}") #{name}
+                            a.ui.grey.header(href="/s/#{name}") #{name}
                                 
                     .ui.grey.header.get_badges
                         i.certificate.icon
@@ -213,7 +213,7 @@ template(name='ruser')
                             
 template(name='user_doc_item')
     .ui.item
-        a.ui.header.zoomer.say_title(href="/site/#{site}/doc/#{_id}" class=post_header_class)
+        a.ui.header.zoomer.say_title(href="/s/#{site}/doc/#{_id}" class=post_header_class)
             strong #{score}:
             |!{title}
         |!{about_me}
