round 3 converting route params to q u r s qid, rename people to p

--- a/client/p.jade
+++ b/client/p.jade
@@ -1,4 +1,4 @@
-template(name='people')
+template(name='p')
     .ui.stackable.grid
         .four.wide.column.scrolling
             i.tag.large.icon(title='tags')
