--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -213,7 +213,7 @@ template(name='ruser')
                             
 template(name='user_doc_item')
     .ui.item
-        a.ui.header.zoomer.say_title(href="/s/#{site}/doc/#{_id}" class=post_header_class)
+        a.ui.header.zoomer.say_title(href="/s/#{site}/psot/#{_id}" class=post_header_class)
             strong #{score}:
             |!{title}
         |!{about_me}
