--- a/client/tag.jade
+++ b/client/tag.jade
@@ -69,7 +69,7 @@ template(name='stack_tag')
                             img.ui.invert.mini.inline.image(src=watson.metadata.image)    
                         | #{site}
                     with owner
-                        a.ui.basic.segment.zoomer.pointer.say(href="/s/#{current_doc.site}/u/#{user_id}")
+                        a.ui.basic.segment.zoomer.pointer.say(href="/s/#{site}/u/#{user_id}")
                             img.ui.rounded.image(src=profile_image)
                             .ui.header #{display_name}
                                 small {{ commafy reputation }}
@@ -140,7 +140,7 @@ template(name='stack_tag')
                                 with owner
                                     .ui.divider
                                     i.chat.icon
-                                    a.ui.inline.header.say.zoomer(href="/s/#{current_doc.site}/u/#{user_id}")
+                                    a.ui.inline.header.say.zoomer(href="/s/#{site}/u/#{user_id}")
                                         img.ui.avatar.invert.image(src=profile_image)
                                         |!{display_name}
                                         |{{ commafy reputation }}
@@ -175,7 +175,7 @@ template(name='stack_tag')
     
                                 with owner
                                     div
-                                    a.ui.header.say.zoomer(href="/s/#{current_doc.site}/u/#{user_id}")
+                                    a.ui.header.say.zoomer(href="/s/#{site}/u/#{user_id}")
                                         img.ui.avatar.invert.image(src=profile_image)
                                         |!{display_name}
                                     |{{ commafy reputation }}
