--- a/client/s.css
+++ b/client/s.css
@@ -11,7 +11,7 @@ body {
     /*background: rgba(200,200,200,1) !important;*/
     /*filter: invert(1) !important; */
      /*overscroll-behavior: none; */
-    /*transition: all .25s ease !important;*/
+    transition: all .5s ease !important;
     /* background: #0e0e44 !important; */
 }
 html {
