split profile view, init say_this template

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -16,6 +16,9 @@ template(name='user_button')
 template(name='new')
     .ui.header
         
+template(name='say_this')
+    .ui.circular.icon.button.say_this   
+        i.megaphone.icon
 
 // template(name='viewed')
 //     .ui.header viewed by
